manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-ping-pong
  template:
    metadata:
      labels:
        app: py-ping-pong
    spec:
      containers:
        - name: py-ping
          image: m1kkou/py-ping:latest
        - name: py-pong
          image: m1kkou/py-ping:pong-latest
