manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-ping-svc
spec:
  type: ClusterIP
  selector:
    app: py-ping-pong
  ports:
    - name: ping
      port: 2345
      protocol: TCP
      targetPort: 3000
