manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-logout-ingress
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: py-pong-svc
                port:
                  number: 2346
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py-ping-svc
                port:
                  number: 2345
